--- a/django-web-app/blog/templates/blog/base.html
+++ b/django-web-app/blog/templates/blog/base.html
@@ -34,7 +34,10 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated%}
-              <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+              <form action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="nav-item nav-link btn btn-link">Logout</button>
+              </form>
 
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
